Project renamed to DMDownloader Setup has been removed and will be migrated to the Inno Setup script 	modified:   CONTRIBUTING.md 	renamed:    DMYoutube2MP3.py -> DMDownloader.py 	deleted:    DMYoutube2MP3.nsi 	modified:   README.md 	modified:   build.bat 	modified:   docs/contributing.md 	modified:   docs/faq.md 	modified:   docs/index.md 	modified:   docs/installation.md 	modified:   docs/usage.md 	modified:   languages/en.json 	modified:   languages/hr.json 	modified:   languages/sr.json 	renamed:    res/DMYoutube2MP3.ico -> res/DMDownloader.ico 	modified:   res/version_info.txt 	modified:   settings.py

--- a/languages/en.json
+++ b/languages/en.json
@@ -4,13 +4,13 @@
     "Finished:": "Finished:",
     "Download Error": "Download Error",
     "Unsuccessfull": "Unsuccessfull",
-    "YouTube URL:": "YouTube URL:",
+    "YouTube URL:": "YouTube or Dailymotion URL:",
     "Paste from Clipboard": "Paste from Clipboard",
     "Download": "Download",
     "Download history:": "Download history:",
     "Clear history": "Clear history",
-    "Clipboard does not contains a valid YouTube link.": "Clipboard does not contains a valid YouTube link.",
-    "Please enter a YouTube URL": "Please enter a YouTube URL.",
+    "Clipboard does not contains a valid YouTube link.": "Clipboard does not contains a valid YouTube or Dailymotion link.",
+    "Please enter a YouTube URL": "Please enter a YouTube or Dailymotion URL.",
     "Download in progress...": "Download in progress...",
     "Show in Folder": "Show in Folder",
     "Delete": "Delete",
