--- a/languages/hr.json
+++ b/languages/hr.json
@@ -4,13 +4,13 @@
     "Finished:": "Završeno:",
     "Download Error": "Pogrješka tijekom preuzimanja",
     "Unsuccessfull": "Neuspješno",
-    "YouTube URL:": "YouTube URL:",
+    "YouTube URL:": "YouTube ili Dailymotion URL:",
     "Paste from Clipboard": "Nalijepi iz Clipboard-a",
     "Download": "Preuzmi",
     "Download history:": "Povijest preuzimanja:",
     "Clear history": "Očisti povijest preuzimanja",
-    "Clipboard does not contains a valid YouTube link.": "Clipboard ne sadrži valjanu YouTube vezu.",
-    "Please enter a YouTube URL": "Molimo unesite YouTube URL.",
+    "Clipboard does not contains a valid YouTube link.": "Clipboard ne sadrži valjanu YouTube ili Dailymotion vezu.",
+    "Please enter a YouTube URL": "Molimo unesite YouTube ili Dailymotion URL.",
     "Download in progress...": "Preuzimanje u tijeku...",
     "Show in Folder": "Prikaži u mapi",
     "Delete": "Obriši",
