--- a/languages/sr.json
+++ b/languages/sr.json
@@ -4,13 +4,13 @@
     "Finished:": "Завршено:",
     "Download Error": "Грешка у Преузимању",
     "Unsuccessfull": "Неуспешно",
-    "YouTube URL:": "YouTube веза:",
+    "YouTube URL:": "YouTube или Dailymotion веза:",
     "Paste from Clipboard": "Залепи из Клипборд-а",
     "Download": "Преузми",
     "Download history:": "Историја преузимања:",
     "Clear history": "Очисти историју",
-    "Clipboard does not contains a valid YouTube link.": "Клипборд не садржи валидну YouTube везу.",
-    "Please enter a YouTube URL": "Молимо унесите YouTube везу",
+    "Clipboard does not contains a valid YouTube link.": "Клипборд не садржи валидну YouTube или Dailymotion везу.",
+    "Please enter a YouTube URL": "Молимо унесите YouTube или Dailymotion везу",
     "Download in progress...": "Преузимање у току...",
     "Show in Folder": "Покажи у Директоријуму",
     "Delete": "Избриши",
