--- a/languages/es.json
+++ b/languages/es.json
@@ -25,6 +25,8 @@
     "Cancel": "Cancelar",
     "Select download folder": "Seleccionar carpeta de descargas",
     "Settings saved. Restart app to apply changes.": "Configuración guardada. Reinicia la aplicación para aplicar los cambios.",
-    "Info": "Información"
+    "Info": "Información",
+    "File format:": "Formato de archivo:",
+    "Quality:": "Calidad:"
   }
   
