--- a/languages/sr.json
+++ b/languages/sr.json
@@ -25,5 +25,7 @@
     "Cancel": "Откажи",
     "Select download folder": "Изаберите директоријум за преузимања",
     "Settings saved. Restart app to apply changes.": "Подешавања су сачувана. Рестартујте апликацију како бисте применили промене.",
-    "Info": "Информација"
+    "Info": "Информација",
+    "File format:": "Формат датотеке",
+    "Quality:": "Квалитет:"
 }
